# marine-ml-pipeline

./: .gitignore  README.md  params.yaml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yaml
data/: README.md
data/siteid_107/: 202501_marine.parquet  202502_marine.parquet  202503_marine.parquet  202504_marine.parquet  202505_marine.parquet  202506_marine.parquet  202507_marine.parquet  202508_marine.parquet  202509_marine.parquet  202510_marine.parquet  202511_marine.parquet  202512_marine.parquet
data/siteid_75/: 202501_marine.parquet  202502_marine.parquet  202503_marine.parquet  202504_marine.parquet  202505_marine.parquet  202506_marine.parquet  202507_marine.parquet  202508_marine.parquet  202509_marine.parquet  202510_marine.parquet  202511_marine.parquet  202512_marine.parquet
notebooks/: exploration.ipynb  optuna.ipynb
src/marine_ml/: __init__.py  constants.py  data_loading.py  plots.py  prepare_data.py  preprocess.py  serve.py  train.py  utils.py
src/marine_ml/helpers/: mlflow_helper.py  optuna_helper.py
src/marine_ml/plots/: __init__.py  mapping.py  model_evalution.py  waves.py
tests/: conftest.py  test_data_loading.py  test_e2e.py  test_utils.py
